--- a/css/styles.css
+++ b/css/styles.css
@@ -90,6 +90,8 @@ a {
 .main-one {
   background-color: #2e2f42;
   padding: 188px 0;
+  background-image: url(./images/fon-main-one.jpg),
+    linear-gradient(rgba(46, 47, 66, 0.7));
 }
 .main-title {
   font-weight: 700;
