--- a/css/styles.css
+++ b/css/styles.css
@@ -90,9 +90,17 @@ a {
 .main-one {
   background-color: #2e2f42;
   padding: 188px 0;
-  background-image: url(./images/fon-main-one.jpg),
-    linear-gradient(rgba(46, 47, 66, 0.7));
+  background-image: linear-gradient(
+      to bottom,
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(/images/fon-main-one.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
+
 .main-title {
   font-weight: 700;
   font-size: 56px;
