--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,29 @@ ol {
 a {
   text-decoration: none;
 }
+h1,
+h2,
+h3,
+p {
+  margin: 0;
+}
+
+.container {
+  max-width: 1158px;
+  margin: 0 auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+img {
+  display: block;
+}
+
+/*==================HEADER===================*/
+.header-logo .logo-part {
+  color: #2e2f42;
+  margin-right: 76px;
+}
 .logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -22,27 +45,6 @@ a {
   color: #4d5ae5;
 }
 
-.header-logo .logo-part {
-  color: #2e2f42;
-  margin-right: 76px;
-}
-
-.footer-logo .logo-part {
-  color: #f4f4fd;
-  display: inline-block;
-}
-.footer-logo {
-  margin-bottom: 16px;
-  display: inline-block;
-}
-.footer-text {
-  max-width: 264px;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #f4f4fd;
-}
 .nav-link {
   font-weight: 500;
   font-size: 16px;
@@ -51,6 +53,19 @@ a {
   color: #2e2f42;
   padding: 24px 0;
   display: block;
+}
+.header-nav {
+  display: flex;
+  align-items: center;
+}
+
+.nav-list {
+  display: flex;
+  gap: 40px;
+}
+
+.page-header {
+  border-bottom: 1px solid #e7e9fc;
 }
 
 .contacts {
@@ -71,6 +86,7 @@ a {
   display: block;
   padding: 24px 0;
 }
+
 .name-container {
   display: flex;
   justify-content: space-between;
@@ -83,10 +99,15 @@ a {
 .contacts-link:focus {
   color: #404bbf;
 }
-.page-footer {
-  background-color: #2e2f42;
-  padding: 100px 0;
+.header-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
 }
+/*==================HEADER===================*/
+/*==================SECTION 1===================*/
 .main-one {
   background-color: #2e2f42;
   padding: 188px 0;
@@ -134,6 +155,9 @@ a {
 .main-button {
   color: #fff;
 }
+/*==================SECTION 1===================*/
+
+/*==================FEATURES===================*/
 .features {
   padding: 120px 0;
 }
@@ -180,7 +204,9 @@ h2 {
   color: #2e2f42;
   text-transform: capitalize;
 }
+/*==================FEATURES===================*/
 
+/*==================OUR TEAM===================*/
 .our-team {
   background-color: #f4f4fd;
   padding: 120px 0;
@@ -219,7 +245,9 @@ h2 {
 .title-item {
   padding: 32px 0;
 }
+/*==================OUR TEAM===================*/
 
+/*==================OUR PORTFOLIO===================*/
 .portfolio-title {
   font-weight: 500;
   font-size: 20px;
@@ -256,42 +284,8 @@ h2 {
   border: 1px solid #e7e9fc;
   border-top: none;
 }
-.header-text {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #f4f4fd;
-}
-h1,
-h2,
-h3,
-p {
-  margin: 0;
-}
+/*==================OUR PORTFOLIO===================*/
 
-.container {
-  max-width: 1158px;
-  margin: 0 auto;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-.header-nav {
-  display: flex;
-  align-items: center;
-}
-
-.nav-list {
-  display: flex;
-  gap: 40px;
-}
-
-.page-header {
-  border-bottom: 1px solid #e7e9fc;
-}
-img {
-  display: block;
-}
 .team-icon-list {
   display: flex;
   justify-content: center;
@@ -308,12 +302,31 @@ img {
   justify-content: center;
   height: 100%;
   width: 100%;
-  cursor: pointer;
-  transition-property: background-color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+/*=================FOOTER=============*/
+.footer-logo .logo-part {
+  color: #f4f4fd;
+  display: inline-block;
+}
+.footer-logo {
+  margin-bottom: 16px;
+  display: inline-block;
+}
+.footer-text {
+  max-width: 264px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+}
+.page-footer {
+  background-color: #2e2f42;
+  padding: 100px 0;
 }
 .icon-footer-list {
   display: flex;
   gap: 16px;
 }
+/*=================FOOTER=============*/
