--- a/css/styles.css
+++ b/css/styles.css
@@ -54,6 +54,21 @@ img {
   padding: 24px 0;
   display: block;
 }
+.nav-link link {
+  position: relative;
+  color: #404bbf;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.nav-link link::after {
+  content: none;
+  width: 100%;
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  background-color: #404bbf;
+  height: 4px;
+  border-radius: 2px;
+}
 .header-nav {
   display: flex;
   align-items: center;
@@ -66,6 +81,8 @@ img {
 
 .page-header {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: зі значенням 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .contacts {
@@ -85,6 +102,7 @@ img {
   font-style: normal;
   display: block;
   padding: 24px 0;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .name-container {
@@ -112,7 +130,6 @@ img {
   background-color: #2e2f42;
   padding: 188px 0;
   background-image: linear-gradient(
-      to bottom,
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
@@ -165,6 +182,16 @@ img {
   display: flex;
   gap: 24px;
 }
+.features-container-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f4f4fd;
+  height: 112px;
+  border-radius: 4px;
+  border: 1px solid #8e8f99;
+  margin-bottom: 8px;
+}
 .features-item {
   width: calc((100% - 72px) / 4);
 }
@@ -215,6 +242,8 @@ h2 {
   background-color: #ffffff;
   width: calc((100% - 72px) / 4);
   border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .our-team-title {
   margin-bottom: 72px;
@@ -275,24 +304,54 @@ h2 {
   flex-wrap: wrap;
   column-gap: 24px;
   row-gap: 48px;
+ transform: translateY(0%);
 }
 .portfolio-list-item {
   width: calc((100% - 48px) / 3);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
 }
+.portfolio-list-item:hover {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+ 
+}
+
+.portfolio-img {
+  position: relative;
+  overflow: hidden;
+ 
+}
+.portfolio-text {
+  position: absolute;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  top: 0;
+  padding: 40px 32px;
+  background-color: #4d5ae5;
+  transform: translateY(100%);
+  width: 100%;
+  height: 100%;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ 
+}
+
 .container-portfolio {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
   border-top: none;
 }
+.team-icon-item {
+  width: 40px;
+  height: 40px;
+}
 /*==================OUR PORTFOLIO===================*/
-
 .team-icon-list {
   display: flex;
   justify-content: center;
   gap: 24px;
-  margin-top: 8px;
-  padding-left: 16px;
-  padding-right: 16px;
 }
 .team-icon-link {
   display: flex;
@@ -302,6 +361,14 @@ h2 {
   justify-content: center;
   height: 100%;
   width: 100%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.team-icon-link:hover,
+.team-icon-link:focus {
+  background-color: #404bbf;
+}
+.team-icon {
+  fill: #f4f4fd;
 }
 
 /*=================FOOTER=============*/
@@ -324,9 +391,48 @@ h2 {
 .page-footer {
   background-color: #2e2f42;
   padding: 100px 0;
+  display: flex;
+  align-items: baseline;
+  
+  
 }
+
 .icon-footer-list {
   display: flex;
   gap: 16px;
 }
+.icon-footer-item {
+  width: 40px;
+  height: 40px;
+}
+.icon-footer-link {
+  width: 100%;
+  height: 100%;
+  background-color:  #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+.icon-footer-link:hover, .icon-footer-link:focus {
+  background-color: #31d0aa; 
+}
+.svg-footer {
+  fill: #f4f4fd;
+
+}
+.footer-container {
+  margin-right: 120px;
+}
+.footer-social {
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #fff;
+margin-bottom: 16px;
+}
+
 /*=================FOOTER=============*/
