--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,7 @@ ol {
 a {
   text-decoration: none;
 }
+
 h1,
 h2,
 h3,
@@ -272,8 +273,31 @@ h2 {
   gap: 24px;
 }
 .title-item {
-  padding: 32px 0;
+  padding: 32px 0;}
+  
+  .team-icon-list {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
 }
+.team-icon-link {
+  display: flex;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.team-icon-link:hover,
+.team-icon-link:focus {
+  background-color: #404bbf;
+}
+.team-icon {
+  fill: #f4f4fd;
+}
+
 /*==================OUR TEAM===================*/
 
 /*==================OUR PORTFOLIO===================*/
@@ -304,39 +328,41 @@ h2 {
   flex-wrap: wrap;
   column-gap: 24px;
   row-gap: 48px;
- transform: translateY(0%);
+
 }
 .portfolio-list-item {
   width: calc((100% - 48px) / 3);
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  
 }
-.portfolio-list-item:hover {
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
- 
-}
-
-.portfolio-img {
-  position: relative;
-  overflow: hidden;
- 
-}
-.portfolio-text {
+.portfolio-overlay {
   position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  transform: translateX(-100%);
+  transform: translateY(-100%);
+  background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
-  top: 0;
   padding: 40px 32px;
   background-color: #4d5ae5;
-  transform: translateY(100%);
-  width: 100%;
-  height: 100%;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
  
 }
+.portfolio-img {
+  position: relative;
+  overflow: hidden;
+}
+.portfolio-img:hover {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08); ;
+}
+
+.portfolio-img:hover .portfolio-overlay {
+  transform: translateX(0);
+  bottom: 0;
+} 
 
 .container-portfolio {
   padding: 32px 16px;
@@ -348,28 +374,7 @@ h2 {
   height: 40px;
 }
 /*==================OUR PORTFOLIO===================*/
-.team-icon-list {
-  display: flex;
-  justify-content: center;
-  gap: 24px;
-}
-.team-icon-link {
-  display: flex;
-  background-color: #4d5ae5;
-  border-radius: 50%;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-  width: 100%;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.team-icon-link:hover,
-.team-icon-link:focus {
-  background-color: #404bbf;
-}
-.team-icon {
-  fill: #f4f4fd;
-}
+
 
 /*=================FOOTER=============*/
 .footer-logo .logo-part {
@@ -389,12 +394,10 @@ h2 {
   color: #f4f4fd;
 }
 .page-footer {
-  background-color: #2e2f42;
-  padding: 100px 0;
   display: flex;
   align-items: baseline;
-  
-  
+  background-color: #2e2f42;
+  padding: 100px 0;
 }
 
 .icon-footer-list {
@@ -423,7 +426,8 @@ h2 {
   fill: #f4f4fd;
 
 }
-.footer-container {
+.footer-logo-text {
+
   margin-right: 120px;
 }
 .footer-social {
