--- a/css/styles.css
+++ b/css/styles.css
@@ -54,22 +54,25 @@ img {
   color: #2e2f42;
   padding: 24px 0;
   display: block;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
-.nav-link link {
+.nav-link.current {
   position: relative;
   color: #404bbf;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ 
 }
-.nav-link link::after {
-  content: none;
-  width: 100%;
+.nav-link.current::after {
+  content: "";
   position: absolute;
   left: 0;
+  width: 100%;
+  height: 4px;
   bottom: -1px;
   background-color: #404bbf;
-  height: 4px;
   border-radius: 2px;
 }
+
 .header-nav {
   display: flex;
   align-items: center;
@@ -82,7 +85,7 @@ img {
 
 .page-header {
   border-bottom: 1px solid #e7e9fc;
-  box-shadow: зі значенням 0px 2px 1px rgba(46, 47, 66, 0.08),
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
@@ -138,6 +141,9 @@ img {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  max-width: 1440px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .main-title {
@@ -243,8 +249,7 @@ h2 {
   background-color: #ffffff;
   width: calc((100% - 72px) / 4);
   border-radius: 0px 0px 4px 4px;
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+ 
 }
 .our-team-title {
   margin-bottom: 72px;
@@ -332,7 +337,15 @@ h2 {
 }
 .portfolio-list-item {
   width: calc((100% - 48px) / 3);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.portfolio-list-item:hover .portfolio-overlay {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  transform: translateY(0);
+}
+
 .portfolio-overlay {
   position: absolute;
   top: 0;
@@ -340,8 +353,6 @@ h2 {
   width: 100%;
   height: 100%;
   cursor: pointer;
-  transform: translateX(-100%);
-  transform: translateY(-100%);
   background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   font-size: 16px;
   line-height: 1.5;
@@ -349,18 +360,17 @@ h2 {
   color: #f4f4fd;
   padding: 40px 32px;
   background-color: #4d5ae5;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
  
 }
 .portfolio-img {
   position: relative;
   overflow: hidden;
 }
-.portfolio-img:hover {
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08); ;
-}
 
 .portfolio-img:hover .portfolio-overlay {
-  transform: translateX(0);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   bottom: 0;
 } 
 
@@ -392,14 +402,17 @@ h2 {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
+  margin-right: 120px;
 }
 .page-footer {
-  display: flex;
-  align-items: baseline;
+ 
   background-color: #2e2f42;
   padding: 100px 0;
 }
-
+.container-footer {
+   display: flex;
+  align-items: baseline;
+}
 .icon-footer-list {
   display: flex;
   gap: 16px;
@@ -419,23 +432,21 @@ h2 {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
-.icon-footer-link:hover, .icon-footer-link:focus {
+.icon-footer-link:hover, 
+.icon-footer-link:focus {
   background-color: #31d0aa; 
 }
 .svg-footer {
   fill: #f4f4fd;
 
 }
-.footer-logo-text {
 
-  margin-right: 120px;
-}
 .footer-social {
 font-weight: 500;
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
-color: #fff;
+color: #FFFFFF;
 margin-bottom: 16px;
 }
 
