--- a/css/styles.css
+++ b/css/styles.css
@@ -170,6 +170,7 @@ img {
   margin-right: auto;
   margin-left: auto;
   min-width: 169px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
 .button:hover,
@@ -249,6 +250,7 @@ h2 {
   background-color: #ffffff;
   width: calc((100% - 72px) / 4);
   border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08); 
  
 }
 .our-team-title {
@@ -402,6 +404,9 @@ h2 {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
+
+}
+.logo-text {
   margin-right: 120px;
 }
 .page-footer {
